--- a/example/src/index.css
+++ b/example/src/index.css
@@ -4,10 +4,6 @@
   font-family: 'Rubik', sans-serif;
 }
 
-.content {
-	@apply py-8 max-w-6xl mx-auto px-4 text-lg space-y-2;
-}
-
 footer {
 	@apply h-96 bg-[#263E52] text-[#f4f4f4] text-2xl font-light pt-40 pb-40;
 }
@@ -26,4 +22,23 @@ footer {
 
 .theme-card .theme-color {
 	@apply flex-grow m-2 rounded-lg h-12;
+}
+
+.font-title {
+	@apply text-2xl lg:text-4xl font-bold mb-6 font-bold;
+}
+
+.content {
+	@apply py-8 lg:py-16 max-w-6xl mx-auto px-4 text-lg space-y-2;
+}
+
+.documentation-container {
+	@apply m-auto px-8 text-gray-800 md:w-[650px] mb-8;
+}
+
+@media (min-width: 1024px) {
+  .clip-diagonal {
+		overflow: hidden;
+    clip-path: polygon(0 0, 100% 0%, 115% 85%, 0 100%);
+  }
 }
