--- a/src/index.css
+++ b/src/index.css
@@ -26,12 +26,20 @@
   --color-hello-csv-tertiary: var(--hello-csv-color-tertiary);
   --color-hello-csv-tertiary-light: var(--hello-csv-color-tertiary-light);
   --color-hello-csv-success: var(--hello-csv-color-success);
+  --color-hello-csv-success-light: var(--hello-csv-color-success-light);
+  --color-hello-csv-success-extra-light: var(
+    --hello-csv-color-success-extra-light
+  );
   --color-hello-csv-danger: var(--hello-csv-color-danger);
   --color-hello-csv-danger-light: var(--hello-csv-color-danger-light);
   --color-hello-csv-danger-extra-light: var(
     --hello-csv-color-danger-extra-light
   );
   --color-hello-csv-warning: var(--hello-csv-color-warning);
+  --color-hello-csv-warning-light: var(--hello-csv-color-warning-light);
+  --color-hello-csv-warning-extra-light: var(
+    --hello-csv-color-warning-extra-light
+  );
   --color-hello-csv-info: var(--hello-csv-color-info);
   --color-hello-csv-muted: var(--hello-csv-color-muted);
   --color-hello-csv-muted-light: var(--hello-csv-color-muted-light);
@@ -45,11 +53,15 @@
     --hello-csv-color-secondary: theme(colors.sky.600);
     --hello-csv-color-tertiary: theme(colors.gray.300);
     --hello-csv-color-tertiary-light: theme(colors.gray.50);
-    --hello-csv-color-success: theme(colors.emerald.500);
+    --hello-csv-color-success: theme(colors.green.700);
+    --hello-csv-color-success-light: theme(colors.green.400);
+    --hello-csv-color-success-extra-light: theme(colors.green.50);
     --hello-csv-color-danger: theme(colors.red.600);
     --hello-csv-color-danger-light: theme(colors.red.500);
-    --hello-csv-color-danger-extra-light: theme(colors.red.200);
-    --hello-csv-color-warning: theme(colors.yellow.400);
+    --hello-csv-color-danger-extra-light: theme(colors.red.50);
+    --hello-csv-color-warning: theme(colors.yellow.700);
+    --hello-csv-color-warning-light: theme(colors.yellow.400);
+    --hello-csv-color-warning-extra-light: theme(colors.yellow.50);
     --hello-csv-color-info: theme(colors.sky.500);
     --hello-csv-color-muted: theme(colors.gray.50);
     --hello-csv-color-muted-light: theme(colors.gray.100);
@@ -63,10 +75,14 @@
     --hello-csv-color-tertiary: theme(colors.gray.300);
     --hello-csv-color-tertiary-light: theme(colors.gray.50);
     --hello-csv-color-success: theme(colors.green.400);
+    --hello-csv-color-success-light: theme(colors.green.300);
+    --hello-csv-color-success-extra-light: theme(colors.green.100);
     --hello-csv-color-danger: theme(colors.red.500);
     --hello-csv-color-danger-light: theme(colors.red.400);
     --hello-csv-color-danger-extra-light: theme(colors.red.100);
-    --hello-csv-color-warning: theme(colors.orange.400);
+    --hello-csv-color-warning: theme(colors.orange.700);
+    --hello-csv-color-warning-light: theme(colors.orange.400);
+    --hello-csv-color-warning-extra-light: theme(colors.orange.50);
     --hello-csv-color-info: theme(colors.sky.400);
     --hello-csv-color-muted: theme(colors.gray.50);
     --hello-csv-color-muted-light: theme(colors.gray.100);
@@ -80,10 +96,14 @@
     --hello-csv-color-tertiary: theme(colors.slate.300);
     --hello-csv-color-tertiary-light: theme(colors.slate.50);
     --hello-csv-color-success: theme(colors.lime.700);
+    --hello-csv-color-success-light: theme(colors.lime.600);
+    --hello-csv-color-success-extra-light: theme(colors.lime.400);
     --hello-csv-color-danger: theme(colors.red.700);
     --hello-csv-color-danger-light: theme(colors.red.600);
-    --hello-csv-color-danger-extra-light: theme(colors.red.400);
-    --hello-csv-color-warning: theme(colors.yellow.600);
+    --hello-csv-color-danger-extra-light: theme(colors.red.50);
+    --hello-csv-color-warning: theme(colors.orange.700);
+    --hello-csv-color-warning-light: theme(colors.orange.400);
+    --hello-csv-color-warning-extra-light: theme(colors.orange.50);
     --hello-csv-color-info: theme(colors.sky.700);
     --hello-csv-color-muted: theme(colors.gray.50);
     --hello-csv-color-muted-light: theme(colors.gray.100);
